# Unity3DPlugin

./: README.md
Unity Project Plugin/Assets/: PluginImport.cs
UnityProject/Assets/: ASimpleScene.unity  Arithmetic.cs  ArithmeticWrapper.cs  BombWrapper.cs  Calculator.cs  Game.cs  PrinterWrapper.cs
UnityProject/ProjectSettings/: ProjectSettings.asset
VSCPlugin/: Api.cpp  Api.h  Arithmetic.cpp  Arithmetic.h  Bomb.cpp  Bomb.h  CMakeLists.txt  Plugin.cpp  Printer.h
VSCPlugin/api/: Api.cpp  Api.h
